# tvh-api

./: LICENSE  README.md  pyproject.toml
epg/: README.md  pyproject.toml
epg/src/epg_package/: api.py  epg.py  html.py  main.py  page.py
epg/tests/: EPG230625,0200-1000.html  EPG230625,1000-1800.html  EPG230625,1800-0200.html  epg.py  test.py
mdns/: LICENSE  README.md  pyproject.toml
mdns/src/: test.py
mdns/src/mdns/: main.py  query.py  sender.py  tvh.py
src/tvhAPI_pkg/: api.py  blks.py  channels.py  page.py  set.py  time.py
src/tvhAPI_pkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: EPG230728,0200-1000.html  EPG230728,1000-1800.html  EPG230728,1800-0200.html  basic.py  epg.py  tvhState.py  tvhtests.py
