[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdns_ip_tvh"
version = "0.0.0"
authors = [
  { name="Mike Cooke", email="drmikecooke@gmail.com" },
]
description = "A package to get status of my TVH servers and mDNS IPs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
tvh = "mdns.main:main"
